--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "budget-app",
+  "name": "progressive-budget",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -14,12 +14,12 @@
   },
   "author": "",
   "license": "ISC",
-  
-"dependencies": {
-  "compression": "^1.7.4",
-  "express": "^4.17.1",
-  "if-env": "^1.0.4",
-  "lite-server": "^2.5.3",
-  "mongoose": "^5.5.15",
-  "morgan": "^1.9.1"
+  "dependencies": {
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "lite-server": "^2.5.3",
+    "mongoose": "^5.5.15",
+    "morgan": "^1.9.1"
+  }
 }
